@@ -24,7 +24,7 @@
  * SUCH DAMAGE.
  */
 
-This is flipit version 0.1.4, a program for controlling X10 devices
+This is flipit version 0.1.5, a program for controlling X10 devices
 via a cm17a "Firecracker" from X10 Ltd.
 
 This is an ALPHA version of flipit.  Features are missing and/or
