@@ -93,7 +93,7 @@
 .nr % 0
 .rr F
 .\}
-.TH FLIPIT 1 "flipit version 0.1.4" "18/Aug/1999" "flipit 0.1.3"
+.TH FLIPIT 1 "flipit version 0.1.5" "22/Aug/1999" "flipit 0.1.5"
 .UC
 .if n .hy 0
 .if n .na
@@ -190,9 +190,12 @@
 .SH "NAME"
 flipit \- control the X10 Firecracker (CM17A)
 .SH "SYNOPSIS"
-flipit\ [\fBflip\fR\ \fB(a-p)(1-16)\fR\ \fB(on|off)\fR]\ [repeat...]
+.PP
+.Vb 1
+\& flipit [-h] [-t tty] [COMMAND ARGS] [COMMAND ARGS]...
+.Ve
 .SH "DESCRIPTION"
-This document describes flipit version 0.1.3.
+This document describes flipit version 0.1.5.
 .PP
 Flipit allows you to control X10 devices with your Unix computer by
 means of a Firecracker (model number CM17A) plugged into a serial
@@ -204,12 +207,51 @@ X10 Ltd.  See http://www.x10.com/ for product information.
 .PP
 For more information, see http://www.lickey.com/flipit/.
 .SH "OPTIONS"
-Flipit has a simple command structure.  The first argument must always
-be \*(L'flip.\*(R'  The next argument is a device specifier.  Device
-specifiers are comprised of a house code (a letter \*(L"a\*(R" to \*(L"p") and a
-device code (a number 1 to 16).  The next argument is either \*(L"on\*(R" or
-\*(L"off.\*(R"  These three arguments can be repeated in this sequence, which
-allows to turn more than one device on or off at a time.
+First pass any options to flipit, then pass any commands.  For a list of
+commands, see the COMMANDS section below.  Now, for the options...
+.Ip "help" 4
+.Sp
+.Vb 1
+\&  -h
+.Ve
+Displays the usage message.
+.Ip "tty" 4
+.Sp
+.Vb 1
+\&  -t tty
+.Ve
+Set the tty flipit will use.  This is usually set in the configuration
+file \fIflipit.conf\fR, but this option lets you override it, mainly for
+testing purposes.
+.SH "COMMANDS"
+After any of the above options, you pass any number of commands on the
+command line.  The commands are flip, dim and brighten.
+.PP
+Most of the commands take a \*(L"device-specifier\*(R" argument.  This is just
+a way to specify a given X10 device with a string of characters.
+Device specifiers are comprised of a house code (a letter \*(L"a\*(R" to \*(L"p")
+and a device code (a number 1 to 16).  E.g. a10
+.PP
+For concrete examples, see the EXAMPLES section.
+.Ip "brighten" 4
+.Sp
+.Vb 1
+\&  brighten device-specifier steps
+.Ve
+Brighten a device by a given number of steps.  Steps can be from 1 to 6.
+.Ip "dim" 4
+.Sp
+.Vb 1
+\&  dim device-specifier steps
+.Ve
+Dim a device by a given number of steps.  Steps can be from 1 to 6.
+.Ip "flip" 4
+.Sp
+.Vb 1
+\&  flip device-specifier on|off
+.Ve
+Flip a device on or off.  The first argument is a device specifier
+(see above).  The next argument is either \*(L"on\*(R" or \*(L"off.\*(R"
 .SH "ERRORS"
 If everything goes well, flipit will exit with a value of zero.  Upon
 error, it will print the reason why on stderr and exit with a non-zero
@@ -223,6 +265,11 @@ The following will first turn device 10 in house code C off, then turn
 device 16 in house code A on:
 .PP
 \f(CWflipit flip c10 off flip a16 on\fR
+.PP
+The following will dim device a5 by 2 steps, then brighten device d7 by 4
+steps.
+.PP
+\f(CWflipit dim a5 2 brighten d7 4\fR
 .SH "FILES"
 flipit reads the filename of the tty device to use from the
 \fIflipit.conf\fR file.  The \fIflipit.conf\fR file is usually in the
@@ -232,7 +279,13 @@ This is an ALPHA version of flipit.  Not all features are implemented.
 .PP
 A similar and more full featured program is called BottleRocket.
 .SH "BUGS"
-Flipit doesn't create any lock files when accessing the tty.
+Flipit doesn't create any lock files when accessing the tty.  There should at
+least be an option to do this for those using the cm17a on the same serial
+port as their modem or similar.
+.PP
+There are reports of the brighten command always taking the lamp to the full
+brightness.  I haven't been able to reproduce that here.  Any suggestions or
+fixes are appreciated.
 .SH "RESTRICTIONS"
 Flipit does no security checking itself.  If it finds that it can open
 the tty device named in \fIflipit.conf\fR it will be happy to do so.
@@ -251,6 +304,18 @@ http://www.lickey.com/flipit/
 .IX Header "DESCRIPTION"
 
 .IX Header "OPTIONS"
+
+.IX Item "help"
+
+.IX Item "tty"
+
+.IX Header "COMMANDS"
+
+.IX Item "brighten"
+
+.IX Item "dim"
+
+.IX Item "flip"
 
 .IX Header "ERRORS"
 
