@@ -7,7 +7,8 @@
 #
 # Common serial device names:
 #
-#	Linux:		/dev/ttyS0, /dev/ttyS1, etc.
-#	OpenBSD:	/dev/tty00, /dev/tty01, etc.
+#	Linux:			/dev/ttyS0, /dev/ttyS1, etc.
+#	Linux (older kernels):	/dev/cua0, /dev/cua1, etc.
+#	OpenBSD:		/dev/tty00, /dev/tty01, etc.
 #
 tty	/dev/ttyS0
