@@ -15,6 +15,7 @@
 	<LI><A HREF="#SYNOPSIS">SYNOPSIS</A>
 	<LI><A HREF="#DESCRIPTION">DESCRIPTION</A>
 	<LI><A HREF="#OPTIONS">OPTIONS</A>
+	<LI><A HREF="#COMMANDS">COMMANDS</A>
 	<LI><A HREF="#ERRORS">ERRORS</A>
 	<LI><A HREF="#EXAMPLES">EXAMPLES</A>
 	<LI><A HREF="#FILES">FILES</A>
@@ -35,15 +36,13 @@ flipit - control the X10 Firecracker (CM17A)
 <HR>
 <H1><A NAME="SYNOPSIS">SYNOPSIS</A></H1>
 <P>
-flipit&nbsp;[<STRONG>flip</STRONG>&nbsp;<STRONG>(a-p)(1-16)</STRONG>&nbsp;<STRONG>(on|off)</STRONG>]&nbsp;[repeat...]
-
-
-
+<PRE> flipit [-h] [-t tty] [COMMAND ARGS] [COMMAND ARGS]...
+</PRE>
 <P>
 <HR>
 <H1><A NAME="DESCRIPTION">DESCRIPTION</A></H1>
 <P>
-This document describes flipit version 0.1.4.
+This document describes flipit version 0.1.5.
 
 <P>
 Flipit allows you to control X10 devices with your Unix computer by means
@@ -63,13 +62,65 @@ HREF="http://www.lickey.com/flipit/.">http://www.lickey.com/flipit/.</A>
 <HR>
 <H1><A NAME="OPTIONS">OPTIONS</A></H1>
 <P>
-Flipit has a simple command structure. The first argument must always be
-'flip.' The next argument is a device specifier. Device specifiers are
-comprised of a house code (a letter ``a'' to ``p'') and a device code (a
-number 1 to 16). The next argument is either ``on'' or ``off.'' These three
-arguments can be repeated in this sequence, which allows to turn more than
-one device on or off at a time.
+First pass any options to flipit, then pass any commands. For a list of
+commands, see the COMMANDS section below. Now, for the options...
 
+<DL>
+<DT><STRONG><A NAME="item_help">help</A></STRONG><DD>
+<P>
+<PRE>  -h
+</PRE>
+<P>
+Displays the usage message.
+
+<DT><STRONG><A NAME="item_tty">tty</A></STRONG><DD>
+<P>
+<PRE>  -t tty
+</PRE>
+<P>
+Set the tty flipit will use. This is usually set in the configuration file <EM>flipit.conf</EM>, but this option lets you override it, mainly for testing purposes.
+
+</DL>
+<P>
+<HR>
+<H1><A NAME="COMMANDS">COMMANDS</A></H1>
+<P>
+After any of the above options, you pass any number of commands on the
+command line. The commands are flip, dim and brighten.
+
+<P>
+Most of the commands take a ``device-specifier'' argument. This is just a
+way to specify a given X10 device with a string of characters. Device
+specifiers are comprised of a house code (a letter ``a'' to ``p'') and a
+device code (a number 1 to 16). E.g. a10
+
+<P>
+For concrete examples, see the EXAMPLES section.
+
+<DL>
+<DT><STRONG><A NAME="item_brighten">brighten</A></STRONG><DD>
+<P>
+<PRE>  brighten device-specifier steps
+</PRE>
+<P>
+Brighten a device by a given number of steps. Steps can be from 1 to 6.
+
+<DT><STRONG><A NAME="item_dim">dim</A></STRONG><DD>
+<P>
+<PRE>  dim device-specifier steps
+</PRE>
+<P>
+Dim a device by a given number of steps. Steps can be from 1 to 6.
+
+<DT><STRONG><A NAME="item_flip">flip</A></STRONG><DD>
+<P>
+<PRE>  flip device-specifier on|off
+</PRE>
+<P>
+Flip a device on or off. The first argument is a device specifier (see
+above). The next argument is either ``on'' or ``off.''
+
+</DL>
 <P>
 <HR>
 <H1><A NAME="ERRORS">ERRORS</A></H1>
@@ -98,6 +149,15 @@ device 16 in house code A on:
 
 
 <P>
+The following will dim device a5 by 2 steps, then brighten device d7 by 4
+steps.
+
+<P>
+<CODE>flipit dim a5 2 brighten d7 4</CODE>
+
+
+
+<P>
 <HR>
 <H1><A NAME="FILES">FILES</A></H1>
 <P>
@@ -118,7 +178,14 @@ A similar and more full featured program is called BottleRocket.
 <HR>
 <H1><A NAME="BUGS">BUGS</A></H1>
 <P>
-Flipit doesn't create any lock files when accessing the tty.
+Flipit doesn't create any lock files when accessing the tty. There should
+at least be an option to do this for those using the cm17a on the same
+serial port as their modem or similar.
+
+<P>
+There are reports of the brighten command always taking the lamp to the
+full brightness. I haven't been able to reproduce that here. Any
+suggestions or fixes are appreciated.
 
 <P>
 <HR>
